--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,7 +1,10 @@
 {
   "name": "StudentPortalMobileApplication",
   "integrations": {
-    "capacitor": {}
+    "capacitor": {},
+    "cordova": {
+      "enabled": false
+    }
   },
   "type": "angular"
 }
