--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/firebase": "^5.19.1",
     "@ionic-native/splash-screen": "^5.0.0",
-    "@ionic-native/status-bar": "^5.0.0",
+    "@ionic-native/status-bar": "^5.22.0",
     "@ionic/angular": "^5.0.0",
     "@ionic/pwa-elements": "^1.4.2",
     "angularfire2": "^5.2.3",
     "bootstrap": "^4.0.0",
+    "cordova-plugin-statusbar": "^2.4.3",
     "core-js": "^2.5.4",
     "firebase": "^7.6.0",
     "font-awesome": "^4.7.0",
