--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@capacitor/android": "^1.5.0",
     "@capacitor/core": "1.5.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/downloader": "^5.22.0",
     "@ionic-native/firebase": "^5.19.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.22.0",
@@ -34,6 +35,7 @@
     "core-js": "^2.5.4",
     "firebase": "^7.6.0",
     "font-awesome": "^4.7.0",
+    "integrator-cordova-plugin-downloader": "^1.1.0",
     "roboto-fontface": "^0.10.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
