--- a/angular.json
+++ b/angular.json
@@ -43,6 +43,9 @@
               },
               {
                 "input": "./node_modules/font-awesome/css/font-awesome.css"
+              },
+              {
+                "input": "./node_modules/animate.css/animate.css"
               }
             ],
             "scripts": []
