--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ionic/angular": "^5.0.0",
     "@ionic/pwa-elements": "^1.4.2",
     "angularfire2": "^5.2.3",
+    "animate.css": "^3.7.2",
     "bootstrap": "^4.0.0",
     "cordova-plugin-statusbar": "^2.4.3",
     "core-js": "^2.5.4",
